--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
                 <td>Local Server</td>
                 <td>10 M</td>
                 <td>8 MB</td>
-                <td><button onclick="loadUrl('url_puzzle_15', 'puzzle 15 local')">Link</button></td>
+                <td><button onclick="loadUrl('url', 'puzzle 15 local')">Link</button></td>
             </tr>
             <tr>
                 <td>RWKV-6 Puzzle 15 Final</td>
                 <td>Github</td>
                 <td>10 M</td>
                 <td>8 MB</td>
-                <td><button onclick="loadUrl('url_puzzle_15', 'puzzle 15')">Link</button></td>
+                <td><button onclick="loadUrl('url', 'puzzle 15')">Link</button></td>
             </tr>
         </table>
         <style>
@@ -74,7 +74,7 @@
         </form>
     </div>
     <div style="max-width:750px; margin-top:1rem;" id="reply"></div>
-    <script src="web/web_rwkv_realweb.js"></script>
+    <script src="web/web_rwkv_puzzles.js"></script>
     <script src="web/app.js"></script>
 </head>
 
