--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             </tr>
             <tr>
                 <td>RWKV-6 Puzzle 15 Final</td>
-                <td>Online</td>
+                <td>Hugging Face</td>
                 <td>10 M</td>
                 <td>8 MB</td>
-                <td><button onclick="loadUrl('url', 'puzzle 15')">Link</button></td>
+                <td><button onclick="loadUrl('url', 'puzzle 15 hf')">Link</button></td>
             </tr>
         </table>
         <style>
@@ -51,7 +51,8 @@
         <div style="max-width:750px; margin-top:1rem;">Load model using a model URL. The URL must be a <u>direct</u>
             link to the model file. I.e. it must contain <b>/resolve/</b>, not /blob/ and must end in <i>.st</i></div>
         <div style="background:lightgrey; padding:0.5rem; width:fit-content;">
-            <input id="url" style="width:700px" value="../assets/models/rwkv-puzzle15.st">
+            <input id="url" style="width:700px"
+                value="https://huggingface.co/cryscan/rwkv-puzzles/resolve/main/rwkv-puzzle15.st">
             <button onclick="load()">Load</button>
         </div>
     </div>
