generate solvable puzzle

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <div style="max-width:750px; margin-top:1rem;" id="reply"></div>
     <script src="web/web_rwkv_puzzles.js"></script>
     <script src="web/app.js"></script>
+    <script src="web/puzzle_generator.js"></script>
     <div id="root"></div>
       <!-- React and ReactDOM via CDN -->
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
