Add user visit data collection

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,7 @@
     <title>RWKV Web</title>
     <script src="llm/web_rwkv_puzzles.js"></script>
     <script src="llm/worker.js"></script>
+    <script defer src="https://analytics.rwkv.cn/script.js" data-website-id="7b8636b6-6e1c-4391-8e0a-f62f9e9396ca"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
